# shhhtype-releases

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json
.claude/: CLAUDE.md
.github/workflows/: notify-windows.yml  release.yml  update-latest-tags.yml
docs/: transcription-optimizations.md
documentation/: label_studio_config.xml  merge_datasets.py  smart_waste_bin_implementation_plan.md  waste_taxonomy.yaml  yolo_training_config.yaml
scripts/: setup-dev-signing.sh
shhhtype/: index.html
shhhtype-web-rebuild/: package-lock.json  package.json  shhhtype-gtm-playbook.md  vercel.json
shhhtype-web-rebuild/public/: robots.txt  sitemap.xml
shhhtype-web-rebuild/src/: middleware.ts
src/: App.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/skills/hormozi/: SKILL.md  category-detection-guide.md  frameworks.md  hooks-and-ctas.md  hormozi-skill.skill  post-examples.md  rewrite-rules-by-category.md  voice-and-tone.md
src-tauri/src/: analytics.rs  commands.rs  lib.rs  license.rs  main.rs  rewrite.rs  skills.rs  sound.rs  state.rs  update.rs  windows.rs
src-tauri/src/audio/: capture.rs  mod.rs  normalize.rs  resampler.rs
src-tauri/src/config/: keychain.rs  mod.rs  settings.rs
src-tauri/src/db/: migrations.rs
src-tauri/src/inject/: clipboard.rs  keyboard.rs
src-tauri/src/transcribe/: engine.rs  groq.rs  mod.rs  model.rs
src-tauri/src/tray/: setup.rs
src-tauri/src/vad/: energy.rs
src/components/: History.tsx  Overlay.tsx  Settings.tsx  Welcome.tsx
src/hooks/: useTauriEvents.ts
src/legal/: privacy.md  terms.md
voice2txt/: package.json
(+66 files in other folders)
