[package]
name = "shhhtype"
version = "0.1.0"
description = "Voice-to-text developer tool for macOS"
authors = ["g1tech"]
edition = "2021"

[lib]
name = "shhhtype_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Audio capture
cpal = "0.15"

# Speech-to-text (whisper.cpp Rust bindings with Metal GPU)
whisper-rs = { version = "0.13", features = ["metal"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Clipboard
arboard = "3"

# macOS keyboard simulation
core-foundation = "0.10"
core-graphics = "0.24"

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
anyhow = "1"
thiserror = "2"

# Audio processing
hound = "3.5"
rubato = "0.16"

# HTTP client for model downloads
reqwest = { version = "0.12", features = ["stream", "blocking", "multipart", "json"] }
futures-util = "0.3"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
dirs = "6"
parking_lot = "0.12"
gethostname = "0.5"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
